--- a/SPM/about.html
+++ b/SPM/about.html
@@ -15,13 +15,10 @@
                 <li><a href="about.html">OUR TEAM</a></li>
                 
                 <li class="dropdown">
-                <a href="#" class="dropbtn" a href="services.html">SERVICES</a>
+                <a href="#" class="dropbtn">SERVICES</a>
                 <div class="dropdown-content">
-                    <a href="healthypaws.html">HealthyPaws</a>
                     <a href="pawgroom.html">PawGroom</a>
                     <a href="pawmed.html">PawMed</a>
-                    <a href="petvacay.html">PetVacay</a>
-                    <a href="pettyshoot.html">PettyShoot</a>
                 </div>
                 </li>
                 <li><a href="index.html">HOME</a></li>
