--- a/SPM/contact.html
+++ b/SPM/contact.html
@@ -29,7 +29,41 @@
         <div id= "contact">
             <div class= "container">
                 <img src = "images/Pawgram.png" alt= "pawgram logo" width= 100 height= 100>
-                <h1>CONTACT US</h1>
+                <header>
+                <h1><b>Contact us</b></h1>
+                    </header>
+
+                    <div id="form">
+
+                    <div class="fish" id="fish"></div>
+                    <div class="fish" id="fish2"></div>
+
+                    <form id="waterform" method="post">
+
+                    <div class="formgroup" id="name-form">
+                        <label for="name">Your name</label>
+                        <input type="text" id="name" name="name" />
+                    </div>
+
+                    <div class="formgroup" id="email-form">
+                        <label for="email">Your e-mail</label>
+                        <input type="email" id="email" name="email" />
+                    </div>
+
+                    <div class="formgroup" id="address-form">
+                        <label for="address">Your address</label>
+                        <input type="text" id="address" name="address" />
+                    </div>
+
+                    <div class="formgroup" id="message-form">
+                        <label for="message">Your message</label>
+                        <textarea id="message" name="message"></textarea>
+                    </div>
+
+                        <input type="submit" value="Send your message!" />
+                    </br></br>
+                    </form>
+                    </div>
             </div>
         </div>
     </body>
