added new background pictures, edited the contact forms, fixed the nav bar specifically the dropdown and made the home page

--- a/SPM/pawmed.html
+++ b/SPM/pawmed.html
@@ -2,7 +2,7 @@
 <html lang= "en">
 <head>
     <meta charset="utf-8">
-    <title>Pawgram | PAwMed</title>
+    <title>Pawgram | PawMed</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" href="images/pawgram.png" />
 </head>
