--- a/SPM/pawgroom.html
+++ b/SPM/pawgroom.html
@@ -28,7 +28,15 @@
         </div>
         <div id= "pawgroom">
             <div class= "container">
-                <img src = "images/Pawgram.png" alt= "pawgram logo" width= 100 height= 100>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
+                <h1>PAWGROOM</h1>
                 <h1>PAWGROOM</h1>
             </div>
         </div>
