--- a/SPM/index.html
+++ b/SPM/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="styles/style.css">
-    <Link rel="icon" href="styles/images/icon.png">
+    <link rel="icon" href="images/pawgram.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
@@ -18,26 +18,23 @@
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="about.html">OUR TEAM</a></li>
                 
-                <li class="dropdown">
+                 <li class="dropdown">
                 <a href="#" class="dropbtn">SERVICES</a>
                 <div class="dropdown-content">
-                    <a href="healthypaws.html">HealthyPaws</a>
                     <a href="pawgroom.html">PawGroom</a>
                     <a href="pawmed.html">PawMed</a>
-                    <a href="petvacay.html">PetVacay</a>
-                    <a href="pettyshoot.html">PettyShoot</a>
                 </div>
                 </li>
                 <li><a href="index.html">HOME</a></li>
-               
             </ul>
         </nav>
+        <div class="banner">
+        <div id="banner">
+            <blockquote>
+                Welcome to PAWGRAM! </br>Where No Tails Left Behind!
+            </blockquote>
         </div>
-        <div id= "home">
-            <div class= "container">
-                <img src = "images/Pawgram.png" alt= "pawgram logo" width= 100 height= 100>
-                <h1>HOME</h1>
-            </div>
+    </div>
         </div>
     </body>
 </html>
