--- a/SPM/pawmed.html
+++ b/SPM/pawmed.html
@@ -2,7 +2,7 @@
 <html lang= "en">
 <head>
     <meta charset="utf-8">
-    <title>Pawgram | PAwMed</title>
+    <title>Pawgram | PawMed</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" href="images/pawgram.png" />
 </head>
@@ -27,33 +27,68 @@
         </nav>
         </div>
         <div id= "pawmed">
-             <div class="row">
-              <div class="column">
-                <div class="card">
-                  <img src="images/ourTeam/1.png" alt="MarinelleAlegre" style="width:40%">
-                  <div class="container">
-                    <h2>Marinelle Alegre</h2>
-                    <p class="title">Administrator Module</p>
-                    <p>"3rd year Information Technology Student"</p>
-                     
-                    <p><button class="button">Contact</button></p>
-                  </div>
-                </div>
-              </div>
+                <h1> STORE </h1>
+                <div id="container4">
+    <div id="container3">
+        <div id="container2">
+            <div id="container1">
+                <div id="col1">
+                    <!-- Column one start -->
+                    <h2>Equal height columns</h2>
+                                        <img src = "images/Pawgram.png" alt= "pawgram logo" width= 100 height= 100>
 
-              <div class="column">
-                <div class="card">
-                  <img src="images/ourTeam/2.png" alt="MarinelBaucas" style="width:40%">
-                  <div class="container">
-                    <h2>Marinel Baucas</h2>
-                    <p class="title">Administrator Module</p>
-                    <p>"3rd year Information Technology Student"</p>
-                     
-                    <p><button class="button">Contact</button></p>
-                  </div>
+                    <p>It does not matter how much content is in each column, the background colours will always stretch down to the height of the tallest column.</p>
+                    <h2>4 Column Dimensions</h2>
+                    <p>Each column is 25% percent wide with 2 percent padding on each side.</p>
+                    <h2>No CSS hacks</h2>
+                    <p>The CSS used for this 4 column layout is 100% valid and hack free. To overcome Internet Explorer's broken box model, no horizontal padding or margins are used. Instead, this design uses percentage widths and clever relative positioning.</p>
+                    <!-- Column one end -->
                 </div>
-              </div>
-              </div>
+                <div id="col2">
+                    <!-- Column two start -->
+                    <h2>No Images</h2>
+                    <p>This four column layout requires no images. Many CSS website designs need images to colour in the column backgrounds but that is not necessary with this design. Why waste bandwidth and precious HTTP requests when you can do everything in pure CSS and HTML?</p>
+                    <h2>No JavaScript</h2>
+                    <p>JavaScript is not required. Some website layouts rely on JavaScript hacks to resize divs and force elements into place but you won't see any of that nonsense here.</p>
+                    <!-- Column two end -->
+                </div>
+                <div id="col3">
+                    <!-- Column three start -->
+                    <h2>Valid XHTML strict markup</h2>
+                    <p>The HTML in this layout validates as XHTML 1.0 strict.</p>
+                    <h2>This layout is FREE for anyone to use</h2>
+                    <p>You don't have to pay anything. Simply view the source of this page and save the HTML onto your computer. My only suggestion is to put the CSS into a separate file. If you are feeling generous however, link back to this page so other people can find and use this layout too.</p>
+                    <!-- Column three end -->
+                </div>
+                <div id="col4">
+                    <!-- Column four start -->
+                    <h2>Cross-Browser Compatible</h2>
+                    <p>This 4 column layout has been tested on the following browsers:</p>
+                    <h3>iPhone &amp; iPod Touch</h3>
+                    <ul>
+                        <li>Safari</li>
+                    </ul>
+                    <h3>Mac</h3>
+                    <ul>
+                        <li>Safari</li>
+                        <li>Firefox</li>
+                        <li>Opera 9</li>
+                        <li>Netscape 7 &amp; 9</li>
+                    </ul>
+                    <h3>Windows</h3>
+                    <ul>
+                        <li>Firefox 1.5, 2 &amp; 3</li>
+                        <li>Safari</li>
+                        <li>Opera 8 &amp; 9</li>
+                        <li>Explorer 5.5, 6 &amp; 7</li>
+                        <li>Google Chrome</li>
+                        <li>Netscape 8</li>
+                    </ul>
+                    <!-- Column four end -->
+                </div>
+            </div>
         </div>
+    </div>
+            </div>
     </body>
 </html>
