put it back to the way it was

--- a/SPM/pawmed.html
+++ b/SPM/pawmed.html
@@ -27,68 +27,71 @@
         </nav>
         </div>
         <div id= "pawmed">
-                <h1> STORE </h1>
-                <div id="container4">
+        <h1> PAWMED </h1>
+        <div class= "container">
+        <div id="container4">
     <div id="container3">
         <div id="container2">
             <div id="container1">
                 <div id="col1">
                     <!-- Column one start -->
-                    <h2>Equal height columns</h2>
-                                        <img src = "images/Pawgram.png" alt= "pawgram logo" width= 100 height= 100>
+                </br>
+                    <h2>Vaccination</h2>
+                    <img src = "images/HealthyPaws/p1.jpg" alt= "pawgram logo" width= 80% height= 80%>
 
-                    <p>It does not matter how much content is in each column, the background colours will always stretch down to the height of the tallest column.</p>
-                    <h2>4 Column Dimensions</h2>
-                    <p>Each column is 25% percent wide with 2 percent padding on each side.</p>
-                    <h2>No CSS hacks</h2>
-                    <p>The CSS used for this 4 column layout is 100% valid and hack free. To overcome Internet Explorer's broken box model, no horizontal padding or margins are used. Instead, this design uses percentage widths and clever relative positioning.</p>
+                    <p>WSAVA recommends puppies and kittens are first vaccinated at 8–9 weeks of age, followed by a second vaccination 3-4 weeks later and a third given between 14 and 16 weeks, followed by a booster at one year.</p>
+                    <h2>Services Include:</h2>
+                    <li>Rabies (1 or 3 year)</li>
+                    <li>Feline combo FeLv, FIV, HW test</li>
+                    <li>Fecal test kit</li>
+                    <li>Canine Lyme Vaccine</li>
                     <!-- Column one end -->
                 </div>
                 <div id="col2">
                     <!-- Column two start -->
-                    <h2>No Images</h2>
-                    <p>This four column layout requires no images. Many CSS website designs need images to colour in the column backgrounds but that is not necessary with this design. Why waste bandwidth and precious HTTP requests when you can do everything in pure CSS and HTML?</p>
-                    <h2>No JavaScript</h2>
-                    <p>JavaScript is not required. Some website layouts rely on JavaScript hacks to resize divs and force elements into place but you won't see any of that nonsense here.</p>
+                </br>
+                    <h2>Dental</h2>
+                    <img src = "images/HealthyPaws/p6.jpg" alt= "pawgram logo" width= 75% height= 75%>
+                    <p>A pet’s mouth does important work; the most obvious job is picking up food, chewing, and swallowing. Other jobs that one might not think of as readily are defense, grooming, breathing and cooling.</p>
+                    <h2>Services Include:</h2>
+                    <li>Anesthesia</li>
+                    <li>Dentistry</li>
+                    <li>Oral Diagnostics</li>
+                    <li>Endodontics</li>
                     <!-- Column two end -->
                 </div>
                 <div id="col3">
                     <!-- Column three start -->
-                    <h2>Valid XHTML strict markup</h2>
-                    <p>The HTML in this layout validates as XHTML 1.0 strict.</p>
-                    <h2>This layout is FREE for anyone to use</h2>
-                    <p>You don't have to pay anything. Simply view the source of this page and save the HTML onto your computer. My only suggestion is to put the CSS into a separate file. If you are feeling generous however, link back to this page so other people can find and use this layout too.</p>
+                </br>
+                    <h2>Medical Checkup</h2>
+                    <img src = "images/HealthyPaws/p3.jpg" alt= "pawgram logo" width= 75% height= 75%>
+                    <p>Our comprehensive CAT and DOG general physical wellness examination and vaccination programs are designed to prevent disease and prolong the lives of your companion animals. </p>
+                    <h2>Services Include:</h2>
+                    <li>Behavior</li>
+                    <li>Nutrition</li>
+                    <li>Zoonotic and shared diseases</li>
+                    <li>Safety</li>
                     <!-- Column three end -->
                 </div>
                 <div id="col4">
                     <!-- Column four start -->
-                    <h2>Cross-Browser Compatible</h2>
-                    <p>This 4 column layout has been tested on the following browsers:</p>
-                    <h3>iPhone &amp; iPod Touch</h3>
-                    <ul>
-                        <li>Safari</li>
-                    </ul>
-                    <h3>Mac</h3>
-                    <ul>
-                        <li>Safari</li>
-                        <li>Firefox</li>
-                        <li>Opera 9</li>
-                        <li>Netscape 7 &amp; 9</li>
-                    </ul>
-                    <h3>Windows</h3>
-                    <ul>
-                        <li>Firefox 1.5, 2 &amp; 3</li>
-                        <li>Safari</li>
-                        <li>Opera 8 &amp; 9</li>
-                        <li>Explorer 5.5, 6 &amp; 7</li>
-                        <li>Google Chrome</li>
-                        <li>Netscape 8</li>
-                    </ul>
+                </br>
+                    <h2>Reproduction and Breeding</h2>
+                    <img src = "images/HealthyPaws/p4.jpg" alt= "pawgram logo" width= 75% height= 75%>
+                    <p>You may have your dog spayed or neutered. We will explain the behavior and health benefits and concerns. We can also screen your dog for breed-specific disorders if you are considering breeding.</p>
+                    <h2>Services Include:</h2>
+                    <li>Behavior</li>
+                    <li>Nutrition</li>
+                    <li>Zoonotic and shared diseases</li>
+                    <li>Safety</li>
                     <!-- Column four end -->
                 </div>
             </div>
         </div>
     </div>
+</div>
+</div>
             </div>
+        </div>
     </body>
 </html>
