--- a/SPM/pawgroom.html
+++ b/SPM/pawgroom.html
@@ -1,54 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang= "en">
 <head>
     <meta charset="utf-8">
-    <title>Pawgram | PAwGroom</title>
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" href="images/pawgram.png" />
-</head>
-    <body>
-        <div id= "nav">
-        <nav>
-            <ul class="nav nav-right nav fixed">
-            <li><a href="store.html">STORE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="about.html">OUR TEAM</a></li>
-                
-                <li class="dropdown">
-                <a href="#" class="dropbtn">SERVICES</a>
-                <div class="dropdown-content">
-                    <a href="pawgroom.html">PawGroom</a>
-                    <a href="pawmed.html">PawMed</a>
-                </div>
-                </li>
-                <li><a href="index.html">HOME</a></li>
-               
-            </ul>
-        </nav>
-        </div>
-        <div id= "pawgroom">
-            <div class= "container">
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-                <h1>PAWGROOM</h1>
-            </div>
-        </div>
-    </body>
-</html>
-=======
-<!DOCTYPE html>
-<html lang= "en">
-<head>
-    <meta charset="utf-8">
-    <title>Pawgram | PAwGroom</title>
+    <title>Pawgram | PawGroom</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" href="images/pawgram.png" />
 </head>
@@ -169,4 +123,3 @@
         </div>
     </body>
 </html>
->>>>>>> origin/master
